--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.button1 {
+  width: auto;
+  height: 11px;
+  margin: auto;
+  text-decoration: none;
+  text-align: center;
+  padding: 6px 11px;
+  border: solid 1px #b3b3b3;
+  border-radius: 4px;
+  font-size: 12px;
+  color: #737373;
+  cursor: pointer;
+  user-select: none;
+}
+
+.gradient_1 {
+  background-color: #ffffff;
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #e3e3e3 100%);
+  box-shadow: 0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+}
